deploy finanace